 cnp-mitre-dns-egress-allow-only-matchname-dhz97yh.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "cnp-mitre-dns-egress-allow-only-matchname"-pz6p9q5
  namespace: kube-system
spec:
  description: "dns-egress allow only matchnames"
  endpointSelector:
    matchLabels:
      k8s-app: kube-dns
      pod-template-hash: 599484b884
  egress:
  - toFQDNs:
    - matchName: "api.twitter.com"  #use your own matchnames
  - toEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": kube-system
        "k8s:k8s-app": kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: ANY
      rules:
        dns:
        - matchPattern: "*"
